Productivity-dashboard/style.css
/* ... */
.allElems .allFeatures {
    width: 100%;
    height: 35%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 1.2rem;


    .elem {
        cursor: pointer;
        border-radius: 10px;
        color: var(--tri-1);
        background:
            conic-gradient(from var(--rotate), #0000003b, var(--pri), #0000003b, #0000003b) border-box;
        border: 2px solid rgb(112, 112, 112);
        animation: borderAnimate 4s infinite;
        animation-play-state: paused;
        transition: all 0.5s linear;
        position: relative;
        overflow: hidden;


        &:hover {
            transform: translateY(-0.6rem) scale(1.03);
            animation-play-state: running;
            border: 3px solid transparent;
            box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.341);
        }

        &:hover+&,
        &:has(+ &:hover) {
            transform: translateY(0.5rem) scale(0.97);
        }


        &:active {
            scale: 0.97;
            transition: all 0.2 ease;
        }

        .img-container {
            width: 100%;
            height: 100%;
            position: absolute;
            left: 0;
            top: 0;
            background: #000;

            img {
                width: 100%;
                height: 100%;
                object-fit: cover;
                opacity: 0.7;
                filter: blur(1px);
            }
        }

        h2 {
            font-size: 25px;
            font-weight: 500;
            position: absolute;
            bottom: 4%;
            right: 5%;
            pointer-events: none;
            font-family: monospace;
            letter-spacing: -1px;
            word-spacing: -5px;
        }
    }
}

section.fullElem {
    height: 100%;
    width: 100%;
    background-color: var(--sec);
    padding: 40px;
    display: none;
    position: absolute;
    top: 0;
    z-index: 999;
    user-select: none;

    .container {
        height: 100%;
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 8px;
        /* border: 2px solid red; */

        .upper-container {
            display: flex;
            flex-direction: row-reverse;
            justify-content: space-between;
            align-items: start;
            width: 100%;
            height: 10%;
            /* border: 2px solid green; */

            h2 {
                font-size: 30px;
                font-weight: 500;
            }

            .back {
                cursor: pointer;
                background-color: var(--red);
                color: var(--sec);
                padding: 8px 20px;
                padding-bottom: 9px;
                font-size: 16px;
                font-weight: 500;
                border: none;
                border-radius: 20px;
                transition: all 0.2s ease;

                &:active {
                    scale: 0.95;
                }
            }
        }

        .bottom-container {
            height: 90%;
            width: 100%;
            /* border: 2px solid red; */
        }
    }
}
/* ... */

